<resources>
    <string name="app_name">NewsApp</string>
    <string name="title_apple">AppleNews</string>
    <string name="title_tesla">TeslaNews</string>
    <string name="title_business">BusinessNews</string>
    <string name="title_techCrunch">TechCrunchNews</string>
    <string name="title_wallStreet">WallStreetNews</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="read_full_text">Read full text</string>
</resources>